# ai-career-navigator

./: .dockeringnore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/ai_career_navigator/: __init__.py  config.py  main.py
src/ai_career_navigator/api/: routes.py
tests/: test_echo.py  test_health.py
